remove as_any() implementation for user

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2021"
 
 [dependencies]
 shrub_macros = { path = "macros" }
+downcast-rs = { version = "1.2.0", default-features = false }
