--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-shrub_macros = { path = "macros" }
 downcast-rs = { version = "1.2.0", default-features = false }
+shrub_macros = { path = "macros", optional = true }
+
+[features]
+default = ["proc"]
+proc = ["dep:shrub_macros"]
